moneysplit-web/src/style.scss
$unit: 0.25rem;
$text-unit: 1rem;

:root {
  --text-primary: var(--p-primary-700);
  --text-secondary: var(--p-primary-600);
  --text-muted: var(--p-primary-500);
}

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
  font-family: Arial;
  color: var(--text-primary);
  overscroll-behavior: none;
  padding: 0 !important;
}

#app {
  height: 100svh;
  max-height: 100svh;
}

@media (min-width: 40rem) {
  body {
    display: flex;
    justify-content: center;
    background-color: var(--p-primary-200);
  }

  #app {
    width: 40rem;
    background-color: white;
  }

  .p-drawer-bottom .p-drawer {
    max-width: 40rem !important;
  }

  .p-dialog {
    max-width: 40rem !important;
  }
}

.minimal-card {
  width: 100%;
  border-radius: 0 !important;
}

.ma-0 { margin: (0 * $unit) !important; }
.mx-0 { margin-left: (0 * $unit) !important; margin-right: (0 * $unit) !important; }
.my-0 { margin-top: (0 * $unit) !important; margin-bottom: (0 * $unit) !important; }
.ml-0 { margin-left: (0 * $unit) !important; }
.mr-0 { margin-right: (0 * $unit) !important; }
.mt-0 { margin-top: (0 * $unit) !important; }
.mb-0 { margin-bottom: (0 * $unit) !important; }

.pa-0 { padding: (0 * $unit) !important; }
.px-0 { padding-left: (0 * $unit) !important; padding-right: (0 * $unit) !important; }
.py-0 { padding-top: (0 * $unit) !important; padding-bottom: (0 * $unit) !important; }
.pl-0 { padding-left: (0 * $unit) !important; }
.pr-0 { padding-right: (0 * $unit) !important; }
.pt-0 { padding-top: (0 * $unit) !important; }
.pb-0 { padding-bottom: (0 * $unit) !important; }

.gap-0 { gap: (0 * $unit) !important; }

.ma-1 { margin: (1 * $unit) !important; }
.mx-1 { margin-left: (1 * $unit) !important; margin-right: (1 * $unit) !important; }
.my-1 { margin-top: (1 * $unit) !important; margin-bottom: (1 * $unit) !important; }
.ml-1 { margin-left: (1 * $unit) !important; }
.mr-1 { margin-right: (1 * $unit) !important; }
.mt-1 { margin-top: (1 * $unit) !important; }
.mb-1 { margin-bottom: (1 * $unit) !important; }

.pa-1 { padding: (1 * $unit) !important; }
.px-1 { padding-left: (1 * $unit) !important; padding-right: (1 * $unit) !important; }
.py-1 { padding-top: (1 * $unit) !important; padding-bottom: (1 * $unit) !important; }
.pl-1 { padding-left: (1 * $unit) !important; }
.pr-1 { padding-right: (1 * $unit) !important; }
.pt-1 { padding-top: (1 * $unit) !important; }
.pb-1 { padding-bottom: (1 * $unit) !important; }

.gap-1 { gap: (1 * $unit) !important; }

.ma-2 { margin: (2 * $unit) !important; }
.mx-2 { margin-left: (2 * $unit) !important; margin-right: (2 * $unit) !important; }
.my-2 { margin-top: (2 * $unit) !important; margin-bottom: (2 * $unit) !important; }
.ml-2 { margin-left: (2 * $unit) !important; }
.mr-2 { margin-right: (2 * $unit) !important; }
.mt-2 { margin-top: (2 * $unit) !important; }
.mb-2 { margin-bottom: (2 * $unit) !important; }

.pa-2 { padding: (2 * $unit) !important; }
.px-2 { padding-left: (2 * $unit) !important; padding-right: (2 * $unit) !important; }
.py-2 { padding-top: (2 * $unit) !important; padding-bottom: (2 * $unit) !important; }
.pl-2 { padding-left: (2 * $unit) !important; }
.pr-2 { padding-right: (2 * $unit) !important; }
.pt-2 { padding-top: (2 * $unit) !important; }
.pb-2 { padding-bottom: (2 * $unit) !important; }

.gap-2 { gap: (2 * $unit) !important; }

.ma-3 { margin: (3 * $unit) !important; }
.mx-3 { margin-left: (3 * $unit) !important; margin-right: (3 * $unit) !important; }
.my-3 { margin-top: (3 * $unit) !important; margin-bottom: (3 * $unit) !important; }
.ml-3 { margin-left: (3 * $unit) !important; }
.mr-3 { margin-right: (3 * $unit) !important; }
.mt-3 { margin-top: (3 * $unit) !important; }
.mb-3 { margin-bottom: (3 * $unit) !important; }

.pa-3 { padding: (3 * $unit) !important; }
.px-3 { padding-left: (3 * $unit) !important; padding-right: (3 * $unit) !important; }
.py-3 { padding-top: (3 * $unit) !important; padding-bottom: (3 * $unit) !important; }
.pl-3 { padding-left: (3 * $unit) !important; }
.pr-3 { padding-right: (3 * $unit) !important; }
.pt-3 { padding-top: (3 * $unit) !important; }
.pb-3 { padding-bottom: (3 * $unit) !important; }

.gap-3 { gap: (3 * $unit) !important; }

.ma-4 { margin: (4 * $unit) !important; }
.mx-4 { margin-left: (4 * $unit) !important; margin-right: (4 * $unit) !important; }
.my-4 { margin-top: (4 * $unit) !important; margin-bottom: (4 * $unit) !important; }
.ml-4 { margin-left: (4 * $unit) !important; }
.mr-4 { margin-right: (4 * $unit) !important; }
.mt-4 { margin-top: (4 * $unit) !important; }
.mb-4 { margin-bottom: (4 * $unit) !important; }

.pa-4 { padding: (4 * $unit) !important; }
.px-4 { padding-left: (4 * $unit) !important; padding-right: (4 * $unit) !important; }
.py-4 { padding-top: (4 * $unit) !important; padding-bottom: (4 * $unit) !important; }
.pl-4 { padding-left: (4 * $unit) !important; }
.pr-4 { padding-right: (4 * $unit) !important; }
.pt-4 { padding-top: (4 * $unit) !important; }
.pb-4 { padding-bottom: (4 * $unit) !important; }

.gap-4 { gap: (4 * $unit) !important; }

.ma-5 { margin: (5 * $unit) !important; }
.mx-5 { margin-left: (5 * $unit) !important; margin-right: (5 * $unit) !important; }
.my-5 { margin-top: (5 * $unit) !important; margin-bottom: (5 * $unit) !important; }
.ml-5 { margin-left: (5 * $unit) !important; }
.mr-5 { margin-right: (5 * $unit) !important; }
.mt-5 { margin-top: (5 * $unit) !important; }
.mb-5 { margin-bottom: (5 * $unit) !important; }

.pa-5 { padding: (5 * $unit) !important; }
.px-5 { padding-left: (5 * $unit) !important; padding-right: (5 * $unit) !important; }
.py-5 { padding-top: (5 * $unit) !important; padding-bottom: (5 * $unit) !important; }
.pl-5 { padding-left: (5 * $unit) !important; }
.pr-5 { padding-right: (5 * $unit) !important; }
.pt-5 { padding-top: (5 * $unit) !important; }
.pb-5 { padding-bottom: (5 * $unit) !important; }

.gap-5 { gap: (5 * $unit) !important; }

.ma-6 { margin: (6 * $unit) !important; }
.mx-6 { margin-left: (6 * $unit) !important; margin-right: (6 * $unit) !important; }
.my-6 { margin-top: (6 * $unit) !important; margin-bottom: (6 * $unit) !important; }
.ml-6 { margin-left: (6 * $unit) !important; }
.mr-6 { margin-right: (6 * $unit) !important; }
.mt-6 { margin-top: (6 * $unit) !important; }
.mb-6 { margin-bottom: (6 * $unit) !important; }

.pa-6 { padding: (6 * $unit) !important; }
.px-6 { padding-left: (6 * $unit) !important; padding-right: (6 * $unit) !important; }
.py-6 { padding-top: (6 * $unit) !important; padding-bottom: (6 * $unit) !important; }
.pl-6 { padding-left: (6 * $unit) !important; }
.pr-6 { padding-right: (6 * $unit) !important; }
.pt-6 { padding-top: (6 * $unit) !important; }
.pb-6 { padding-bottom: (6 * $unit) !important; }

.gap-6 { gap: (6 * $unit) !important; }

